css/styles.css
#logo {
    position: absolute;
    width: 350px;
    left: calc(50% - 350px/2);
    top: 20px;
    margin-top: 0;
    margin-bottom: 0;

    font-family: 'Lato', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;

    color: #000000;
}

.title {
    position: absolute;
    width: 350px;
    left: calc(50% - 350px/2);
    top: 100px;
    margin-bottom: 0;
    margin-top: 0;    

    font-family: 'Lato', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 40px;


    color: #000000;
}

.writing-header {
    position: absolute;
    width: 350px;
    left: calc(50% - 350px/2);
    top: 100px;
    margin-bottom: 0;
    margin-top: 0;    
}

.writing-title {
    font-family: 'Lato', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 40px;

    color: #000000;
}

.writing-date {
    /* margin-top: 10px; */

    font-family: 'Lato', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;

    color: #C4C4C4;
}

.writing-body-text {  
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;

    color: #000000;
}

.writing-section-lead {
    font-size: 24px;
    font-weight: normal;
}

.writing-images-preview {
    width: 350px;
}

.writing-caption {
    font-style: italic;
    font-size: 14px;
}

.writing-bold {
    font-size: 18px;
}

#pic-div {
    position: absolute;
    width: 350px;
    left: calc(50% - 350px/2);
    top: 168px;
}

#profile-pic {
    width: 250px;
}

#home-text {
    top: 513px;
}

#start-here-text {
    top: 160px;
}

.writing-date-color {
    color: #C4C4C4;
}

.my-images-preview {
    width: 350px;
}

.body-text {
    position: absolute;
    width: 350px;
    left: calc(50% - 350px/2);
    margin-top: 0;
    margin-bottom: 20px;

    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 22px;

    color: #000000;
}

a {
    color: #3C43FF;
    text-decoration: none;
}

